--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -115,7 +115,7 @@ p {
 </style>
 </head>
 <body>
-<h1>Responsive Layout</h1>
+<h1>Our Menu</h1>
 
 <div class="row">
   <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
