--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,30 +10,29 @@
 <body>
   <h1>Our Menu</h1>
 
-  <div class="row">  
-   <div id="Chicken">
-      <div id="content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis
+  <div class="row"> 
+    <!–– Chicken box ––!>
+    <div id="content col-lg-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis
           eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, 
           nisi, ex similique. Animi, perferendis.
-        </p> 
-      </div>
+      </p> 
     </div>
-  </div>
 
-
-</body>
-</html>
-  <div class="row">
-    <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 5</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
+    <div id="content col-lg-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis
+          eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, 
+          nisi, ex similique. Animi, perferendis.
+      </p> 
+    </div>
+    
+    <div id="content col-lg-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis
+          eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, 
+          nisi, ex similique. Animi, perferendis.
+      </p> 
+    </div>
+    
   </div>
+ 
 </body>
-  
-</html>
