--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/styles.css">
   <title>Module 2 Solution</title>
+  <style>
+  body {background-color: powderblue;}
+    </style>
 </head>
   
 <body>
-  background-color: powderblue;
   <h1>Our Menu</h1>
 
   <div class="row"> 
