--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -13,21 +13,21 @@
 
   <div class="row"> 
     <!–– Chicken box ––!>
-    <div id="content col-lg-4">
+    <div class="content col-lg-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis
           eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, 
           nisi, ex similique. Animi, perferendis.
       </p> 
     </div>
 
-    <div id="content col-lg-4">
+    <div class="content col-lg-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis
           eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, 
           nisi, ex similique. Animi, perferendis.
       </p> 
     </div>
     
-    <div id="content col-lg-4">
+    <div class="content col-lg-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis
           eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, 
           nisi, ex similique. Animi, perferendis.
