--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -14,21 +14,21 @@
   <div class="row"> 
     <div class="content col-lg-4 col-md-6 col-sm-12">
     	<section>
-    	<div class="section_cat">Chicken</div>
+    	<div class="chicken">Chicken</div>
     	<div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</div>
     	</section>
     </div>
 
     <div class="content col-lg-4 col-md-6 col-sm-12">
     	<section>
-    	<div class="section_cat">Beef</div>
+    	<div class="beef">Beef</div>
     	<div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</div>
     	</section>
     </div>
     
     <div class="content col-lg-4 col-md-12 col-sm-12">
     	<section>
-    	<div class="section_cat">Sushi</div>
+    	<div class="sushi">Sushi</div>
     	<div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</div>
     	</section>
     </div>
